# cpp-qt-cmake

./: .gitignore  qtcreator.exe - Shortcut.lnk  readme.md  readme.md.bak
PlainCppOop/: Box.cpp  Box.h  CMakeLists.txt  Reactangle.cpp  Rectangle.h  main.cpp
QtTestCmake2/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Signal_SLots/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Slider/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Stack-Heap-Memory/: CMakeLists.txt  house.cpp  house.h  main.cpp
calorie-counter/: CMakeLists.txt  Person.cpp  Person.h  widget.cpp  widget.h  widget.ui
